# h2048

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  TODO.md  h2048.cabal  h2048.hs  package.yaml  stack.yaml
exe/: Brick.hs  BrickUi.hs  Simple.hs
src/: Main.hs  MainSimple.hs  MainVty.hs  Test.hs  TestCompactLine.hs
src/Game/H2048/: Core.hs  GameState.hs  Gameplay.hs  NewCore.hs  Utils.hs
src/Game/H2048/UI/: Brick.hs  BrickNew.hs  Simple.hs  Vty.hs
src/System/Game/H2048/: Core.hs  Utils.hs
src/System/Game/H2048/UI/: Simple.hs  Vty.hs
test/: Test.hs
test/Game/H2048/: CoreSpec.hs  GameplaySpec.hs  NewCoreSpec.hs
