cabal-version:       2.0
name:                h2048
version:             0.2.0.1
synopsis:            a haskell implementation of Game 2048
description:

  A haskell implementation of Game 2048,
  based on <https://github.com/gabrielecirulli/2048>.

homepage:            https://github.com/Javran/h2048
license:             MIT
license-file:        LICENSE
author:              Javran Cheng
maintainer:          Javran.C@gmail.com
copyright:           Copyright (c) 2014 Javran Cheng
category:            Game
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md

-- TODO: https://cabal.readthedocs.io/en/latest/developing-packages.html#common-stanzas
library
  hs-source-dirs:      src
  exposed-modules:     Game.H2048.Core
                     , Game.H2048.Utils
                     , Game.H2048.UI.Simple
  build-depends:       base >= 4
                     , mtl
                     , MonadRandom
                     , text
                     , lens
                     , data-default

  ghc-options:         -Wall
  default-language:    Haskell2010

executable h2048-simple
  hs-source-dirs:      src
  main-is:             MainSimple.hs
  ghc-options:         -Wall
  build-depends:       base >= 4
                     , mtl
                     , transformers
                     , MonadRandom
                     , text
                     , lens
                     , data-default
                     , h2048
  other-modules:       Game.H2048.Core
                     , Game.H2048.UI.Simple
                     , Game.H2048.Utils
  default-language:    Haskell2010

Test-Suite test
  hs-source-dirs:      src
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  ghc-options:         -Wall
  build-depends:       base >= 4
                     , mtl
                     , transformers
                     , MonadRandom
                     , text
                     , lens
                     , data-default
                     , h2048
                     , HUnit
  other-modules:       Game.H2048.Core
                     , Game.H2048.Utils
  default-language:    Haskell2010
